<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpArtistSetlists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.tabs.TabLayout>
        </androidx.viewpager.widget.ViewPager>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Loading -->
    <com.josuearevalodev.setlistfmpro.customviews.LoadingView
        android:id="@+id/lvLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Error -->
    <com.josuearevalodev.setlistfmpro.customviews.ErrorView
        android:id="@+id/evError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
